tests/ui/diagnostics/normalize-path.stderr
error[E0308]: mismatched types
  --> $DIR/auxiliary/helper.rs:2:5
   |
LL | pub fn foo() -> u32 {
   |                 --- expected `u32` because of return type
LL |     "not a u32"
   |     ^^^^^^^^^^^ expected `u32`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
